主色调改成南邮蓝 修改logo

--- a/themes/simplebootx/Public/css/style.css
+++ b/themes/simplebootx/Public/css/style.css
@@ -180,14 +180,14 @@ line-height: 24px;
 }
 
 .list-boxes:hover{
-border-top: solid 2px #f90;
+border-top: solid 2px #46b8da;
 }
 
 .list-boxes h2 a {
   color: #555;
 }
 .list-boxes:hover h2 a {
-color: #f90;
+color: #46b8da;
 }
 
 .list-boxes .list-actions a{font-size: 16px; text-decoration: none;}
@@ -357,7 +357,7 @@ text-align: center;
 vertical-align: middle;
 background-color: #aaa;
 }
-.ranking li.top3 i{background: #FC9B0B;}
+.ranking li.top3 i{background: #5fc2df;}
 
 /*comment ranking box*/
 .comment-ranking .comment-ranking-inner {
@@ -405,12 +405,12 @@ background-color: #aaa;
 }
 
 .comment-ranking .comment-ranking-inner:hover {
-	border-color: #FC9B0B;
-	border-top-color: #FC9B0B;	
+	border-color: #5fc2df;
+	border-top-color: #5fc2df;	
 	background: #f0f0f0;
 }
 .comment-ranking .comment-ranking-inner:hover:after {
-	border-top-color: #FC9B0B;	
+	border-top-color: #5fc2df;	
 }
 
 .comment-ranking .comment-ranking-inner span.comment-time {
@@ -448,8 +448,8 @@ ul.tc-photos{margin: 0;}
 }
 .tc-photos li img:hover {
 	opacity: 1;
-	border: 1px solid #f90;
-	/* box-shadow: 0 0 0 1px #f90; */
+	border: 1px solid #46b8da;
+	/* box-shadow: 0 0 0 1px #46b8da; */
 }
 
 /**/
@@ -507,8 +507,8 @@ ul.tc-photos{margin: 0;}
 
 .posts .dl-horizontal:hover dt img,
 .posts .dl-horizontal:hover dd a {
-	color:#FC9B0B;
-	border-color: #FC9B0B !important;
+	color:#5fc2df;
+	border-color: #5fc2df !important;
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
 	-o-transition: all 0.4s ease-in-out;
