--- a/admin/themes/simplebootx/Asset/css/admin_login.css
+++ b/admin/themes/simplebootx/Asset/css/admin_login.css
@@ -25,8 +25,8 @@ body {
 }
 .logo {
 	position: absolute;
-	left: 50px;
-	top: 40px;
+	left: 4%;
+	top: 7%;
 }
 .copy {
 	background: rgba(0, 0, 0, 0.3);
@@ -89,6 +89,7 @@ body {
 .login li img {
 	vertical-align: top;
 }
+img{ width: 100%; height: auto;max-width: 100%; display: block; }
 .login .input {
 	width: 225px;
 	padding: 5px;
